mobile overflow-x fix?

--- a/src/styles/normalize.css
+++ b/src/styles/normalize.css
@@ -20,6 +20,10 @@ html {
  * Remove the margin in all browsers.
  */
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   overflow-x: hidden;
